# AdvancedCSVContactManager

./: CMakeLists.txt  Contact.c  Contact.h  ContactList.txt  ContactManager.c  ContactManager.h  Contacts.csv  ContactsTXT.txt  FileIO.c  FileIO.h  LICENSE  README.md  Sorting.c  Sorting.h  StringHandaling.c  StringHandaling.h  Validation.c  Validation.h  WebServer.c  WebServer.h  WebServerFunctions.h  main.c
CivetWeb/include/: civetweb.h
ScreenShots/: desktop.ini
uploads/: uploaded_1761692284.tmp  uploaded_1761692893.tmp  uploaded_1761693389.txt  uploaded_1761693396.txt
www/: index.html  script.js  style.css
